--- a/version/package.json
+++ b/version/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.10.0",
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
+    "lodash": "^4.17.21",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
+    "@types/lodash": "^4.17.20",
     "@types/react": "^19.1.8",
     "@types/react-bootstrap": "^1.0.1",
     "@types/react-dom": "^19.1.6",
